# kamailio

./: .cfg_parser.c.swp  .cfg_parser.h.swp  .clang-format  .cvsignore  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .lgtm.yml  .mailmap  .main.c.swp  .msg_parser.c.swp  .msg_parser.h.swp  .parser_f.c.swp  .parser_f.h.swp  .pre-commit-config.yaml  .route.c.swp  .route.h.swp  .sip_router.cfg.swp  .test.c.swp  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  CMakelists.notes  CODEOWNERS  CODE_OF_CONDUCT.md  COPYING  CREDITS  ChangeLog  ChangeLog_k  DEVELOPMENT_QUICKSTART.md  INSTALL  ISSUES  KAMAILIO_ANALYSIS_REPORT.md  KAMAILIO_C_MODULE_GUIDE.md  KAMAILIO_LUA_GUIDE.md  MARKET_REALITY_AND_STRATEGY.md  Makefile  Makefile.cfg  (+331 more)
misc/tools/lock_contention/: CMakeLists.txt  futex-test-kamailio.c
src/: CMakeLists.txt  Makefile  Makefile.cfg  Makefile.defs  Makefile.groups  Makefile.libs  Makefile.modules  Makefile.radius  Makefile.rules  Makefile.shared  Makefile.sources  Makefile.targets  Makefile.utils  compiler-specific.cmake  defs.cmake  main.c  os-specific.cmake
src/core/: CMakeLists.txt  action.c  action.h  async_task.c  async_task.h  atomic_ops.c  atomic_ops.h  atomic_ops_init.h  autover.h.in  basex.c  basex.h  bit_count.c  bit_count.h  bit_scan.c  bit_scan.h  bit_test.h  ccopts.sh  ccver.sh  cfg.lex  cfg.y  cfg_core.c  cfg_core.h  cfg_parser.c  cfg_parser.h  char_msg_val.h  clist.h  comp_defs.h  compiler_opt.h  config.h  core_cmd.c  core_cmd.h  core_stats.h  coreparam.c  coreparam.h  counters.c  counters.h  crc.c  crc.h  cross_strings.h  daemonize.c  (+194 more)
src/core/atomic/: atomic_alpha.h  atomic_arm.h  atomic_common.h  atomic_mips2.h  atomic_native.h  atomic_ppc.h  atomic_sparc.h  atomic_sparc64.h  atomic_stdatomic.h  atomic_unknown.h  atomic_x86.h
src/core/cfg/: cfg.c  cfg.h  cfg_ctx.c  cfg_ctx.h  cfg_script.c  cfg_script.h  cfg_select.c  cfg_select.h  cfg_struct.c  cfg_struct.h
src/core/crypto/: md5.c  md5.h  md5utils.c  md5utils.h  rijndael.c  rijndael.h  rijndael.tbl  sha256.c  sha256.h  sha3.c  sha3.h  shautils.c  shautils.h
src/core/mem/: dl_config.h  dl_malloc.c  dl_malloc.h  f_malloc.c  f_malloc.h  ll_malloc.c  ll_malloc.h  mem.c  mem.h  memapi.h  memcore.h  memdbg.h  meminfo.h  memtest.c  pkg.c  pkg.h  q_malloc.c  q_malloc.h  sf_malloc.c  sf_malloc.h  shm.c  shm.h  shm_mem.c  shm_mem.h  src_loc.h  tlsf_malloc.c  tlsf_malloc.h  tlsf_malloc_bits.h
src/core/mi/: mi_types.h
src/core/parser/: case_auth.h  case_c_inf.h  case_call.h  case_dive.h  case_even.h  case_expi.h  case_max.h  case_min.h  case_p_pr.h  case_prio.h  case_priv.h  case_prox.h  case_reas.h  case_rout.h  case_serv.h  case_sess.h  case_subj.h  case_to.h  case_unsu.h  case_user.h  case_www.h  hf.c  hf.h  keys.h  msg_parser.c  msg_parser.h  parse_addr_spec.c  parse_addr_spec.h  parse_allow.c  parse_allow.h  parse_body.c  parse_body.h  parse_content.c  parse_content.h  parse_cseq.c  parse_cseq.h  parse_date.c  parse_date.h  parse_def.h  parse_disposition.c  (+54 more)
src/core/rand/: cryptorand.c  cryptorand.h  fastrand.c  fastrand.h  kam_rand.h  ksrxrand.c  ksrxrand.h
src/core/utils/: README  mtops.c  mtops.h  snexpr.h  srjson.c  srjson.h  sruid.c  sruid.h  tmrec.c  tmrec.h
src/lib/: CMakeLists.txt  Makefile  Makefile.defs  Makefile.nonser  README  doxygen.cfg
src/lib/binrpc/: Makefile  Makefile.nonser  binrpc_api.c  binrpc_api.h
src/lib/cds/: .cvsignore  ChangeLog  Makefile.nonser  base64.c  base64.h  cds.c  cds.h  dbid.c  dbid.h  dstring.c  dstring.h  hash_table.c  hash_table.h  list.h  logger.h  memory.c  memory.h  msg_queue.c  msg_queue.h  ptr_vector.c  ptr_vector.h  ref_cntr.c  ref_cntr.h  rr_serialize.c  rr_serialize.h  ser_profile.c  ser_profile.h  serialize.c  serialize.h  simple_profile.c  simple_profile.h  sip_utils.c  sip_utils.h  sstr.c  sstr.h  sync.h  vector.c  vector.h
src/lib/doc/: Makefile  collection.xml  libraries.xml
src/lib/ims/: CMakeLists.txt  Makefile  ims_getters.c  ims_getters.h  useful_defs.h
src/lib/kmi/: Makefile  attr.c  attr.h  fmt.c  mi.c  mi.h  mi_mem.h  tree.c  tree.h
src/lib/presence/: Makefile.nonser  domain_maintainer.c  domain_maintainer.h  lpidf.c  lpidf.h  notifier.h  notifier_domain.c  notifier_domain.h  pidf.c  pidf.h  pres_doc.c  pres_doc.h  qsa.c  qsa.h  qsa_params.c  qsa_params.h  subscriber.h  subscription_info.h  utils.c  utils.h  xml_utils.c  xml_utils.h  xpidf.c  (+1 more)
src/modules/: CMakeLists.txt  groups.cmake
utils/: CMakeLists.txt  README-UTILS
utils/db_berkeley/: CMakeLists.txt  Makefile  bdb_recover.c  bdb_recover.h  kambdb_recover.c  kambdb_recover.h
utils/db_oracle/: Makefile  getres.c  orasel.c  orasel.h  outres.c  selcon.c  util.c
utils/fifo_relay/: fifo_server.php
utils/gen_ha1/: .cvsignore  Makefile  calc.c  calc.h  gen_ha1.c
utils/kamcmd/: CMakeLists.txt  Makefile  README  kamcmd.8  kamcmd.c  license.h  parse_listen_id.c  parse_listen_id.h
utils/kamctl/: CMakeLists.txt  Makefile  README  generate_version_create_mongo.sh  kamctl  kamctl.8  kamctl.base  kamctl.ctlbase  kamctl.db_berkeley  kamctl.dbtext  kamctl.fifo  kamctl.mysql  kamctl.oracle  kamctl.pgsql  kamctl.rpcfifo  kamctl.ser  kamctl.ser_mi  kamctl.sqlbase  kamctl.sqlite  kamctl.unixsock  kamctlrc  kamdbctl  kamdbctl.8  kamdbctl.base  kamdbctl.db_berkeley  kamdbctl.dbtext  kamdbctl.mysql  kamdbctl.oracle  kamdbctl.pgsql  kamdbctl.sqlite  kamdbfunc.oracle
utils/kamunix/: Makefile  kamunix.8  kamunix.c
utils/ngrep/: README  ngrep.8  ngrep.c  ngrep.h  show_eol.patch
utils/pdbt/: .gitignore  Makefile  carrier.c  carrier.h  common.c  common.h  dt.c  dt.h  dtm.c  dtm.h  log.c  log.h  pdb_server.c  pdb_server.conf  pdb_server_backend.c  pdb_server_backend.h  pdbt.c
utils/pike_top/: Makefile
utils/profile/: profile.cfg
utils/protoshoot/: Makefile  README  protoshoot.c
utils/route_graph/: route_graph.py
utils/sercmd/: .cvsignore  EXAMPLES  Makefile  README  license.h  parse_listen_id.c  parse_listen_id.h  sercmd.8  sercmd.c
utils/sercmd2/: Makefile  TODO  asi.txt  license.h  sercmd2  sercmd2.c
utils/serunix/: .cvsignore  Makefile  serunix.c
(+17048 files in other folders)
